switched xUnit to ripple mode Fixed to solve restore problem (missing lib folder in package xUnit)

--- a/ripple.config
+++ b/ripple.config
@@ -18,8 +18,8 @@
     <Dependency Name="FakeItEasy" Version="1.15.0.0" Mode="Float" />
     <Dependency Name="FluentAssertions" Version="2.2.0.0" Mode="Float" />
     <Dependency Name="Machine.Specifications" Version="0.6.1.0" Mode="Fixed" />
-    <Dependency Name="xunit" Version="1.9.2" Mode="Float" />
-    <Dependency Name="xUnit.Extensions" Version="1.9.2.0" Mode="Float" />
+    <Dependency Name="xunit" Version="1.9.2" Mode="Fixed" />
+    <Dependency Name="xUnit.Extensions" Version="1.9.2.0" Mode="Fixed" />
   </Nugets>
   <Groups />
   <References>
