--- a/assets/nuget/appccelerate.statemachine.nuspec
+++ b/assets/nuget/appccelerate.statemachine.nuspec
@@ -10,20 +10,20 @@
     <projectUrl>https://github.com/appccelerate/statemachine</projectUrl>
     <iconUrl>https://github.com/appccelerate/appccelerate/raw/master/docs/nuget.png</iconUrl>
     <requireLicenseAcceptance>true</requireLicenseAcceptance>
-    <description>Notification component for synchronous and asynchronous loosely coupled notification with automatic thread switching:
-      synchronous and asynchronous notification,
-      automatic thread switching: to background or UI thread,
-      loose coupling of event topic publishers and subscribers,
-      publishers and subscribers are referenced by weak references and can therefore be garbage collected
-      multiple publishers and/or subscribers for a single event topic,
-      matchers for publications and subscriptions,
-      thorough customizable logging,
-      extension support.</description>
+    <summary>Hierarchical state machine with fluent definition syntax.</summary>
+    <description>Hierarchical state machine with fluent definition syntax
+      Features:
+      states and events can be defined with enums, strings or ints - resulting in single class state machines,
+      actions on transitions, entry and exit actions, transition guards, 
+      hierarchical with different history behaviors to initialize state always to same state or last active state
+      fluent definition interface
+      synchronous/asynchronous state machine (passive state machine handles state transitions synchronously, active state machine handles state transitions asynchronously on the worker thread of the state machine),
+      extensible thorough logging
+      state machine report for description of state machine (csv, yEd)/description>
 	<releaseNotes>
-      Fixed missing call to base.Initialize in OnUserInterface and OnUserInterfaceAsync handlers resulting in NullReferenceExceptions on ExtensionHost.
     </releaseNotes>
     <copyright>Copyright 2012-2014</copyright>
-    <tags>Appccelerate</tags>
+    <tags>Appccelerate state-machine</tags>
 	<frameworkAssemblies>
       <frameworkAssembly assemblyName="System" targetFramework="net45" />
       <frameworkAssembly assemblyName="System.Core" targetFramework="net45" />
@@ -32,6 +32,7 @@
   </metadata>
   <files>
     <file src="..\..\source\Appccelerate.StateMachine\bin\Release\Appccelerate.StateMachine.dll" target="lib\net45" />
+    <file src="..\..\source\Appccelerate.StateMachine\bin\Release\Appccelerate.StateMachine.pdb" target="lib\net45" />
     <file src="..\..\source\Appccelerate.StateMachine\bin\Release\Appccelerate.StateMachine.xml" target="lib\net45" />
     <file src="..\..\source\Appccelerate.StateMachine\**\*.cs" target="src" />
   </files>  
