--- a/source/Appccelerate.StateMachine/packages.config
+++ b/source/Appccelerate.StateMachine/packages.config
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Appccelerate.Development" version="0.14" targetFramework="portable-net45+win" />
-  <package id="Appccelerate.Development.ProductionCode" version="0.14" targetFramework="portable-net45+win" />
+  <package id="Appccelerate.CheckNugetDependenciesTask" version="0.2.0-Unstable4" targetFramework="portable-net45+win" />
+  <package id="Appccelerate.Development" version="0.18" targetFramework="portable-net45+win" />
+  <package id="Appccelerate.Development.ProductionCode" version="0.18" targetFramework="portable-net45+win" />
   <package id="Appccelerate.Fundamentals" version="2.1.0-Unstable31" targetFramework="portable-net45+win" />
   <package id="GitFlowVersionTask" version="0.14.0" targetFramework="portable-net45+win" />
   <package id="StyleCop.MSBuild" version="4.7.48.0" targetFramework="portable-net45+win" />
