--- a/source/Appccelerate.StateMachine.Facts/packages.config
+++ b/source/Appccelerate.StateMachine.Facts/packages.config
@@ -1,12 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Appccelerate.CheckHintPathTask" version="1.4.0" targetFramework="net45" developmentDependency="true" />
-  <package id="Appccelerate.Development" version="0.35" targetFramework="net45" />
-  <package id="Appccelerate.Development.Facts" version="0.35" targetFramework="net45" />
-  <package id="Appccelerate.Fundamentals" version="2.1.0" targetFramework="net45" />
+  <package id="Appccelerate.CheckHintPathTask" version="1.7.0" targetFramework="net45" developmentDependency="true" />
+  <package id="Appccelerate.Development" version="1.3.0" targetFramework="net45" />
+  <package id="Appccelerate.Development.Facts" version="1.3.0" targetFramework="net45" />
+  <package id="Appccelerate.Fundamentals" version="2.4.0" targetFramework="net45" />
+  <package id="Appccelerate.VersionTask" version="1.2.0" targetFramework="net45" developmentDependency="true" />
   <package id="FakeItEasy" version="1.19.0" targetFramework="net45" />
   <package id="FluentAssertions" version="2.2.0.0" targetFramework="net45" />
-  <package id="GitFlowVersionTask" version="0.14.0" targetFramework="net45" />
   <package id="StyleCop.MSBuild" version="4.7.49.0" targetFramework="net45" developmentDependency="true" />
   <package id="xunit" version="1.9.2" targetFramework="net45" />
   <package id="xunit.extensions" version="1.9.2" targetFramework="net45" />
