--- a/source/Appccelerate.StateMachine/packages.config
+++ b/source/Appccelerate.StateMachine/packages.config
@@ -1,10 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Appccelerate.CheckHintPathTask" version="1.4.0" targetFramework="portable-net45+win" developmentDependency="true" />
-  <package id="Appccelerate.CheckNugetDependenciesTask" version="0.3.0" targetFramework="portable-net45+win" />
-  <package id="Appccelerate.Development" version="0.35" targetFramework="portable-net45+win" />
-  <package id="Appccelerate.Development.ProductionCode" version="0.35" targetFramework="portable-net45+win" />
-  <package id="Appccelerate.Fundamentals" version="2.1.0" targetFramework="portable-net45+win" />
-  <package id="GitFlowVersionTask" version="0.14.0" targetFramework="portable-net45+win" />
+  <package id="Appccelerate.CheckHintPathTask" version="1.7.0" targetFramework="portable-net45+win" developmentDependency="true" />
+  <package id="Appccelerate.CheckNugetDependenciesTask" version="1.2.0" targetFramework="portable-net45+win" />
+  <package id="Appccelerate.Development" version="1.3.0" targetFramework="portable-net45+win" />
+  <package id="Appccelerate.Development.ProductionCode" version="1.3.0" targetFramework="portable-net45+win" />
+  <package id="Appccelerate.Development.ProductionCode.Signed" version="1.3.0" targetFramework="portable-net45+win" developmentDependency="true" />
+  <package id="Appccelerate.Fundamentals" version="2.4.0" targetFramework="portable-net45+win" />
+  <package id="Appccelerate.VersionTask" version="1.2.0" targetFramework="portable-net45+win" developmentDependency="true" />
   <package id="StyleCop.MSBuild" version="4.7.49.0" targetFramework="portable-net45+win" developmentDependency="true" />
 </packages>
