added missing developmentDependency

--- a/source/Appccelerate.StateMachine/packages.config
+++ b/source/Appccelerate.StateMachine/packages.config
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Appccelerate.CheckHintPathTask" version="1.7.0" targetFramework="portable-net45+win" developmentDependency="true" />
-  <package id="Appccelerate.CheckNugetDependenciesTask" version="1.2.0" targetFramework="portable-net45+win" />
-  <package id="Appccelerate.Development" version="1.4.0" targetFramework="portable-net45+win" />
-  <package id="Appccelerate.Development.ProductionCode" version="1.4.0" targetFramework="portable-net45+win" />
+  <package id="Appccelerate.CheckNugetDependenciesTask" version="1.2.0" targetFramework="portable-net45+win" developmentDependency="true" />
+  <package id="Appccelerate.Development" version="1.4.0" targetFramework="portable-net45+win" developmentDependency="true" />
+  <package id="Appccelerate.Development.ProductionCode" version="1.4.0" targetFramework="portable-net45+win" developmentDependency="true" />
   <package id="Appccelerate.Development.ProductionCode.Signed" version="1.4.0" targetFramework="portable-net45+win" developmentDependency="true" />
   <package id="Appccelerate.Fundamentals" version="2.5.0" targetFramework="portable-net45+win" />
   <package id="Appccelerate.VersionTask" version="1.2.0" targetFramework="portable-net45+win" developmentDependency="true" />
