--- a/source/Appccelerate.StateMachine.Specs/packages.config
+++ b/source/Appccelerate.StateMachine.Specs/packages.config
@@ -1,12 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Appccelerate.CheckHintPathTask" version="1.7.0" targetFramework="net45" developmentDependency="true" />
-  <package id="Appccelerate.Development" version="1.4.0" targetFramework="net45" />
-  <package id="Appccelerate.Development.Specs" version="1.4.0" targetFramework="net45" />
-  <package id="Appccelerate.Fundamentals" version="2.5.0" targetFramework="net45" />
-  <package id="Appccelerate.VersionTask" version="1.2.0" targetFramework="net45" developmentDependency="true" />
-  <package id="FakeItEasy" version="1.19.0" targetFramework="net45" />
-  <package id="FluentAssertions" version="2.2.0.0" targetFramework="net45" />
-  <package id="Machine.Specifications" version="0.8.1" targetFramework="net45" />
+  <package id="Appccelerate.CheckHintPathTask" version="1.8.0" targetFramework="net45" developmentDependency="true" />
+  <package id="Appccelerate.Development" version="1.5.0" targetFramework="net45" developmentDependency="true" />
+  <package id="Appccelerate.Development.Specs" version="1.5.0" targetFramework="net45" developmentDependency="true" />
+  <package id="Appccelerate.Fundamentals" version="2.6.0" targetFramework="net45" />
+  <package id="Appccelerate.VersionTask" version="1.9.0" targetFramework="net45" developmentDependency="true" />
+  <package id="FakeItEasy" version="1.24.0" targetFramework="net45" />
+  <package id="FluentAssertions" version="3.2.1" targetFramework="net45" />
+  <package id="Machine.Specifications" version="0.8.3" targetFramework="net45" />
   <package id="StyleCop.MSBuild" version="4.7.49.0" targetFramework="net45" developmentDependency="true" />
 </packages>
