--- a/source/Appccelerate.StateMachine/packages.config
+++ b/source/Appccelerate.StateMachine/packages.config
@@ -5,7 +5,7 @@
   <package id="Appccelerate.Development" version="1.14.0" targetFramework="portable-net45+win" developmentDependency="true" />
   <package id="Appccelerate.Development.ProductionCode" version="1.14.0" targetFramework="portable-net45+win" developmentDependency="true" />
   <package id="Appccelerate.Development.ProductionCode.Signed" version="1.14.0" targetFramework="portable-net45+win" developmentDependency="true" />
-  <package id="Appccelerate.Fundamentals" version="2.8.0" targetFramework="portable-net45+win" />
+  <package id="Appccelerate.Fundamentals" version="2.13.0" targetFramework="portable-net45+win+wp80" />
   <package id="Appccelerate.VersionTask" version="1.17.0" targetFramework="portable-net45+win" developmentDependency="true" />
   <package id="StyleCop.MSBuild" version="4.7.49.0" targetFramework="portable-net45+win" developmentDependency="true" />
 </packages>
