--- a/source/Appccelerate.StateMachine.Facts/packages.config
+++ b/source/Appccelerate.StateMachine.Facts/packages.config
@@ -3,7 +3,7 @@
   <package id="Appccelerate.CheckHintPathTask" version="1.15.0" targetFramework="net45" developmentDependency="true" />
   <package id="Appccelerate.Development" version="1.21.0" targetFramework="net45" developmentDependency="true" />
   <package id="Appccelerate.Development.Facts" version="1.21.0" targetFramework="net45" developmentDependency="true" />
-  <package id="Appccelerate.Fundamentals" version="3.0.0" targetFramework="net45" />
+  <package id="Appccelerate.Fundamentals" version="3.3.0-commitea8ae2ca" targetFramework="net45" />
   <package id="Appccelerate.VersionTask" version="1.17.0" targetFramework="net45" developmentDependency="true" />
   <package id="FakeItEasy" version="1.25.2" targetFramework="net45" />
   <package id="FluentAssertions" version="3.4.0" targetFramework="net45" />
