null arguments can now be passed to Fire
Null caused an exception to be thrown because the check for matching types (passed argument type and expected argument type in handler method) was wrong.

--- a/source/Appccelerate.StateMachine.Facts/Appccelerate.StateMachine.Facts.csproj
+++ b/source/Appccelerate.StateMachine.Facts/Appccelerate.StateMachine.Facts.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Builder.cs" />
     <Compile Include="Events.cs" />
     <Compile Include="ExtensionTest.cs" />
+    <Compile Include="Machine\ActionHolders\ArgumentActionHolderTest.cs" />
     <Compile Include="Machine\ActionHolders\SingleArgumentTransitionActionHolderTest.cs" />
     <Compile Include="Machine\ExceptionCasesTest.cs" />
     <Compile Include="Machine\GuardHolders\SingleArgumentGuardHolderTest.cs" />
