Renamed existing portable version to make space for the new .net standard assembly

--- a/source/Appccelerate.StateMachine.Specs/Appccelerate.StateMachine.Specs.csproj
+++ b/source/Appccelerate.StateMachine.Specs/Appccelerate.StateMachine.Specs.csproj
@@ -102,7 +102,7 @@
     <None Include="Settings.stylecop" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Appccelerate.StateMachine\Appccelerate.StateMachine.csproj">
+    <ProjectReference Include="..\Appccelerate.StateMachine.Portable\Appccelerate.StateMachine.Portable.csproj">
       <Project>{2a577aa9-6c1c-4614-9b8b-94b4cad9cf81}</Project>
       <Name>Appccelerate.StateMachine</Name>
     </ProjectReference>
