--- a/source/Appccelerate.StateMachine.Specs/Appccelerate.StateMachine.Specs.csproj
+++ b/source/Appccelerate.StateMachine.Specs/Appccelerate.StateMachine.Specs.csproj
@@ -10,10 +10,11 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Appccelerate.StateMachine</RootNamespace>
     <AssemblyName>Appccelerate.StateMachine.Specs</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -72,8 +73,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ActiveStateMachines.cs" />
+    <Compile Include="Async\CurrentStateExtension.cs" />
+    <Compile Include="Async\Transitions.cs" />
     <Compile Include="Catch.cs" />
-    <Compile Include="Concern.cs" />
     <Compile Include="CurrentStateExtension.cs" />
     <Compile Include="CustomTypes.cs" />
     <Compile Include="EntryActions.cs" />
