Exit actions support now async/await

--- a/source/Appccelerate.StateMachine.Specs/Appccelerate.StateMachine.Specs.csproj
+++ b/source/Appccelerate.StateMachine.Specs/Appccelerate.StateMachine.Specs.csproj
@@ -75,6 +75,7 @@
     <Compile Include="ActiveStateMachines.cs" />
     <Compile Include="Async\CurrentStateExtension.cs" />
     <Compile Include="Async\EntryActions.cs" />
+    <Compile Include="Async\ExitActions.cs" />
     <Compile Include="Async\Transitions.cs" />
     <Compile Include="Catch.cs" />
     <Compile Include="CurrentStateExtension.cs" />
