Guards support now async/await

--- a/source/Appccelerate.StateMachine.Specs/Appccelerate.StateMachine.Specs.csproj
+++ b/source/Appccelerate.StateMachine.Specs/Appccelerate.StateMachine.Specs.csproj
@@ -76,6 +76,7 @@
     <Compile Include="Async\CurrentStateExtension.cs" />
     <Compile Include="Async\EntryActions.cs" />
     <Compile Include="Async\ExitActions.cs" />
+    <Compile Include="Async\Guards.cs" />
     <Compile Include="Async\Transitions.cs" />
     <Compile Include="Catch.cs" />
     <Compile Include="CurrentStateExtension.cs" />
